argo-rollouts-istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: canary-demo-vsvc
spec:
  gateways:
  - test-gateway
  hosts:
  - "*"
  http:
  - name: primary
    match:
      - uri:
          exact: "/istio-argo"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: canary-demo
        subset: stable  # referenced in canary.trafficRouting.istio.destinationRule.stableSubsetName
      weight: 100
    - destination:
        host: canary-demo
        subset: canary  # referenced in canary.trafficRouting.istio.destinationRule.canarySubsetName
      weight: 0
